hipsim-src/hipsim.output
Grammar

    0 $accept: program $end

    1 program: variable_list code_list

    2 variable_list: %empty
    3              | variable_list variable

    4 @1: %empty

    5 variable: _LABEL_DEF @1 _WORD _NUMBER

    6 code_list: code_line
    7          | code_list code_line

    8 code_line: label_def
    9          | asm_line

   10 label_def: _LABEL_DEF

   11 asm_line: arithmetic
   12         | logical
   13         | flowcontrol
   14         | stack
   15         | _HALT

   16 logical: _AND input _COMMA input _COMMA output
   17        | _OR input _COMMA input _COMMA output
   18        | _XOR input _COMMA input _COMMA output
   19        | _NOT input _COMMA output

   20 arithmetic: _ADD input _COMMA input _COMMA output
   21           | _SUB input _COMMA input _COMMA output
   22           | _MUL input _COMMA input _COMMA output
   23           | _DIV input _COMMA input _COMMA output
   24           | _MOV input _COMMA output

   25 flowcontrol: _CMP input _COMMA input
   26            | _JMP label
   27            | _JEQ label
   28            | _JNE label
   29            | _JGT label
   30            | _JLT label
   31            | _JGE label
   32            | _JLE label
   33            | _JC label
   34            | _JNC label
   35            | _JO label
   36            | _JNO label

   37 stack: _PUSH input
   38      | _POP output
   39      | _CALL label
   40      | _RET

   41 label: _LABEL

   42 output: _REGISTER
   43       | _NUMBER _LPAREN _REGISTER _RPAREN
   44       | _LPAREN _REGISTER _RPAREN
   45       | label

   46 input: _CONSTANT
   47      | _ADDRESS
   48      | output


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    _WORD (258) 5
    _PUSH (259) 37
    _POP (260) 38
    _CALL (261) 39
    _RET (262) 40
    _CMP <i> (263) 25
    _JMP (264) 26
    _JEQ (265) 27
    _JNE (266) 28
    _JGT <i> (267) 29
    _JLT <i> (268) 30
    _JGE <i> (269) 31
    _JLE <i> (270) 32
    _JC (271) 33
    _JNC (272) 34
    _JO (273) 35
    _JNO (274) 36
    _ADD <i> (275) 20
    _SUB <i> (276) 21
    _MUL <i> (277) 22
    _DIV <i> (278) 23
    _MOV (279) 24
    _HALT (280) 15
    _AND <i> (281) 16
    _OR <i> (282) 17
    _XOR <i> (283) 18
    _NOT <i> (284) 19
    _REGISTER <i> (285) 42 43 44
    _CONSTANT <i> (286) 46
    _NUMBER <i> (287) 5 43
    _LABEL_DEF <s> (288) 5 10
    _LABEL <s> (289) 41
    _ADDRESS <s> (290) 47
    _COMMA (291) 16 17 18 19 20 21 22 23 24 25
    _LPAREN (292) 43 44
    _RPAREN (293) 43 44


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    program (40)
        on left: 1
        on right: 0
    variable_list (41)
        on left: 2 3
        on right: 1 3
    variable (42)
        on left: 5
        on right: 3
    @1 (43)
        on left: 4
        on right: 5
    code_list (44)
        on left: 6 7
        on right: 1 7
    code_line (45)
        on left: 8 9
        on right: 6 7
    label_def (46)
        on left: 10
        on right: 8
    asm_line (47)
        on left: 11 12 13 14 15
        on right: 9
    logical (48)
        on left: 16 17 18 19
        on right: 12
    arithmetic (49)
        on left: 20 21 22 23 24
        on right: 11
    flowcontrol (50)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 13
    stack (51)
        on left: 37 38 39 40
        on right: 14
    label <s> (52)
        on left: 41
        on right: 26 27 28 29 30 31 32 33 34 35 36 39 45
    output <s> (53)
        on left: 42 43 44 45
        on right: 16 17 18 19 20 21 22 23 24 38 48
    input <s> (54)
        on left: 46 47 48
        on right: 16 17 18 19 20 21 22 23 24 25 37


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (variable_list)

    program        go to state 1
    variable_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: variable_list . code_list
    3 variable_list: variable_list . variable

    _PUSH       shift, and go to state 4
    _POP        shift, and go to state 5
    _CALL       shift, and go to state 6
    _RET        shift, and go to state 7
    _CMP        shift, and go to state 8
    _JMP        shift, and go to state 9
    _JEQ        shift, and go to state 10
    _JNE        shift, and go to state 11
    _JGT        shift, and go to state 12
    _JLT        shift, and go to state 13
    _JGE        shift, and go to state 14
    _JLE        shift, and go to state 15
    _JC         shift, and go to state 16
    _JNC        shift, and go to state 17
    _JO         shift, and go to state 18
    _JNO        shift, and go to state 19
    _ADD        shift, and go to state 20
    _SUB        shift, and go to state 21
    _MUL        shift, and go to state 22
    _DIV        shift, and go to state 23
    _MOV        shift, and go to state 24
    _HALT       shift, and go to state 25
    _AND        shift, and go to state 26
    _OR         shift, and go to state 27
    _XOR        shift, and go to state 28
    _NOT        shift, and go to state 29
    _LABEL_DEF  shift, and go to state 30

    variable     go to state 31
    code_list    go to state 32
    code_line    go to state 33
    label_def    go to state 34
    asm_line     go to state 35
    logical      go to state 36
    arithmetic   go to state 37
    flowcontrol  go to state 38
    stack        go to state 39


State 3

    0 $accept: program $end .

    $default  accept


State 4

   37 stack: _PUSH . input

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 48


State 5

   38 stack: _POP . output

    _REGISTER  shift, and go to state 40
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 49


State 6

   39 stack: _CALL . label

    _LABEL  shift, and go to state 43

    label  go to state 50


State 7

   40 stack: _RET .

    $default  reduce using rule 40 (stack)


State 8

   25 flowcontrol: _CMP . input _COMMA input

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 51


State 9

   26 flowcontrol: _JMP . label

    _LABEL  shift, and go to state 43

    label  go to state 52


State 10

   27 flowcontrol: _JEQ . label

    _LABEL  shift, and go to state 43

    label  go to state 53


State 11

   28 flowcontrol: _JNE . label

    _LABEL  shift, and go to state 43

    label  go to state 54


State 12

   29 flowcontrol: _JGT . label

    _LABEL  shift, and go to state 43

    label  go to state 55


State 13

   30 flowcontrol: _JLT . label

    _LABEL  shift, and go to state 43

    label  go to state 56


State 14

   31 flowcontrol: _JGE . label

    _LABEL  shift, and go to state 43

    label  go to state 57


State 15

   32 flowcontrol: _JLE . label

    _LABEL  shift, and go to state 43

    label  go to state 58


State 16

   33 flowcontrol: _JC . label

    _LABEL  shift, and go to state 43

    label  go to state 59


State 17

   34 flowcontrol: _JNC . label

    _LABEL  shift, and go to state 43

    label  go to state 60


State 18

   35 flowcontrol: _JO . label

    _LABEL  shift, and go to state 43

    label  go to state 61


State 19

   36 flowcontrol: _JNO . label

    _LABEL  shift, and go to state 43

    label  go to state 62


State 20

   20 arithmetic: _ADD . input _COMMA input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 63


State 21

   21 arithmetic: _SUB . input _COMMA input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 64


State 22

   22 arithmetic: _MUL . input _COMMA input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 65


State 23

   23 arithmetic: _DIV . input _COMMA input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 66


State 24

   24 arithmetic: _MOV . input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 67


State 25

   15 asm_line: _HALT .

    $default  reduce using rule 15 (asm_line)


State 26

   16 logical: _AND . input _COMMA input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 68


State 27

   17 logical: _OR . input _COMMA input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 69


State 28

   18 logical: _XOR . input _COMMA input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 70


State 29

   19 logical: _NOT . input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 71


State 30

    5 variable: _LABEL_DEF . @1 _WORD _NUMBER
   10 label_def: _LABEL_DEF .

    _WORD     reduce using rule 4 (@1)
    $default  reduce using rule 10 (label_def)

    @1  go to state 72


State 31

    3 variable_list: variable_list variable .

    $default  reduce using rule 3 (variable_list)


State 32

    1 program: variable_list code_list .
    7 code_list: code_list . code_line

    _PUSH       shift, and go to state 4
    _POP        shift, and go to state 5
    _CALL       shift, and go to state 6
    _RET        shift, and go to state 7
    _CMP        shift, and go to state 8
    _JMP        shift, and go to state 9
    _JEQ        shift, and go to state 10
    _JNE        shift, and go to state 11
    _JGT        shift, and go to state 12
    _JLT        shift, and go to state 13
    _JGE        shift, and go to state 14
    _JLE        shift, and go to state 15
    _JC         shift, and go to state 16
    _JNC        shift, and go to state 17
    _JO         shift, and go to state 18
    _JNO        shift, and go to state 19
    _ADD        shift, and go to state 20
    _SUB        shift, and go to state 21
    _MUL        shift, and go to state 22
    _DIV        shift, and go to state 23
    _MOV        shift, and go to state 24
    _HALT       shift, and go to state 25
    _AND        shift, and go to state 26
    _OR         shift, and go to state 27
    _XOR        shift, and go to state 28
    _NOT        shift, and go to state 29
    _LABEL_DEF  shift, and go to state 73

    $default  reduce using rule 1 (program)

    code_line    go to state 74
    label_def    go to state 34
    asm_line     go to state 35
    logical      go to state 36
    arithmetic   go to state 37
    flowcontrol  go to state 38
    stack        go to state 39


State 33

    6 code_list: code_line .

    $default  reduce using rule 6 (code_list)


State 34

    8 code_line: label_def .

    $default  reduce using rule 8 (code_line)


State 35

    9 code_line: asm_line .

    $default  reduce using rule 9 (code_line)


State 36

   12 asm_line: logical .

    $default  reduce using rule 12 (asm_line)


State 37

   11 asm_line: arithmetic .

    $default  reduce using rule 11 (asm_line)


State 38

   13 asm_line: flowcontrol .

    $default  reduce using rule 13 (asm_line)


State 39

   14 asm_line: stack .

    $default  reduce using rule 14 (asm_line)


State 40

   42 output: _REGISTER .

    $default  reduce using rule 42 (output)


State 41

   46 input: _CONSTANT .

    $default  reduce using rule 46 (input)


State 42

   43 output: _NUMBER . _LPAREN _REGISTER _RPAREN

    _LPAREN  shift, and go to state 75


State 43

   41 label: _LABEL .

    $default  reduce using rule 41 (label)


State 44

   47 input: _ADDRESS .

    $default  reduce using rule 47 (input)


State 45

   44 output: _LPAREN . _REGISTER _RPAREN

    _REGISTER  shift, and go to state 76


State 46

   45 output: label .

    $default  reduce using rule 45 (output)


State 47

   48 input: output .

    $default  reduce using rule 48 (input)


State 48

   37 stack: _PUSH input .

    $default  reduce using rule 37 (stack)


State 49

   38 stack: _POP output .

    $default  reduce using rule 38 (stack)


State 50

   39 stack: _CALL label .

    $default  reduce using rule 39 (stack)


State 51

   25 flowcontrol: _CMP input . _COMMA input

    _COMMA  shift, and go to state 77


State 52

   26 flowcontrol: _JMP label .

    $default  reduce using rule 26 (flowcontrol)


State 53

   27 flowcontrol: _JEQ label .

    $default  reduce using rule 27 (flowcontrol)


State 54

   28 flowcontrol: _JNE label .

    $default  reduce using rule 28 (flowcontrol)


State 55

   29 flowcontrol: _JGT label .

    $default  reduce using rule 29 (flowcontrol)


State 56

   30 flowcontrol: _JLT label .

    $default  reduce using rule 30 (flowcontrol)


State 57

   31 flowcontrol: _JGE label .

    $default  reduce using rule 31 (flowcontrol)


State 58

   32 flowcontrol: _JLE label .

    $default  reduce using rule 32 (flowcontrol)


State 59

   33 flowcontrol: _JC label .

    $default  reduce using rule 33 (flowcontrol)


State 60

   34 flowcontrol: _JNC label .

    $default  reduce using rule 34 (flowcontrol)


State 61

   35 flowcontrol: _JO label .

    $default  reduce using rule 35 (flowcontrol)


State 62

   36 flowcontrol: _JNO label .

    $default  reduce using rule 36 (flowcontrol)


State 63

   20 arithmetic: _ADD input . _COMMA input _COMMA output

    _COMMA  shift, and go to state 78


State 64

   21 arithmetic: _SUB input . _COMMA input _COMMA output

    _COMMA  shift, and go to state 79


State 65

   22 arithmetic: _MUL input . _COMMA input _COMMA output

    _COMMA  shift, and go to state 80


State 66

   23 arithmetic: _DIV input . _COMMA input _COMMA output

    _COMMA  shift, and go to state 81


State 67

   24 arithmetic: _MOV input . _COMMA output

    _COMMA  shift, and go to state 82


State 68

   16 logical: _AND input . _COMMA input _COMMA output

    _COMMA  shift, and go to state 83


State 69

   17 logical: _OR input . _COMMA input _COMMA output

    _COMMA  shift, and go to state 84


State 70

   18 logical: _XOR input . _COMMA input _COMMA output

    _COMMA  shift, and go to state 85


State 71

   19 logical: _NOT input . _COMMA output

    _COMMA  shift, and go to state 86


State 72

    5 variable: _LABEL_DEF @1 . _WORD _NUMBER

    _WORD  shift, and go to state 87


State 73

   10 label_def: _LABEL_DEF .

    $default  reduce using rule 10 (label_def)


State 74

    7 code_list: code_list code_line .

    $default  reduce using rule 7 (code_list)


State 75

   43 output: _NUMBER _LPAREN . _REGISTER _RPAREN

    _REGISTER  shift, and go to state 88


State 76

   44 output: _LPAREN _REGISTER . _RPAREN

    _RPAREN  shift, and go to state 89


State 77

   25 flowcontrol: _CMP input _COMMA . input

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 90


State 78

   20 arithmetic: _ADD input _COMMA . input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 91


State 79

   21 arithmetic: _SUB input _COMMA . input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 92


State 80

   22 arithmetic: _MUL input _COMMA . input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 93


State 81

   23 arithmetic: _DIV input _COMMA . input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 94


State 82

   24 arithmetic: _MOV input _COMMA . output

    _REGISTER  shift, and go to state 40
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 95


State 83

   16 logical: _AND input _COMMA . input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 96


State 84

   17 logical: _OR input _COMMA . input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 97


State 85

   18 logical: _XOR input _COMMA . input _COMMA output

    _REGISTER  shift, and go to state 40
    _CONSTANT  shift, and go to state 41
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _ADDRESS   shift, and go to state 44
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 47
    input   go to state 98


State 86

   19 logical: _NOT input _COMMA . output

    _REGISTER  shift, and go to state 40
    _NUMBER    shift, and go to state 42
    _LABEL     shift, and go to state 43
    _LPAREN    shift, and go to state 45

    label   go to state 46
    output  go to state 99


State 87

    5 variable: _LABEL_DEF @1 _WORD . _NUMBER

    _NUMBER  shift, and go to state 100


State 88

   43 output: _NUMBER _LPAREN _REGISTER . _RPAREN

    _RPAREN  shift, and go to state 101


State 89
